--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,8 @@
   --base-blue: #1CB3C8;
   --light-gray: #738598;
   --light-yellow: #FFFFD2;
+  --green: #3EC70B;
+  --red: #FF6969;
 }
 
 header {
@@ -32,10 +34,35 @@ header {
   padding: var(--padding);
 }
 
+button:hover {
+  cursor: pointer;
+  filter: brightness(1.1);
+}
+
 .game-area {
   display: grid;
   grid-template-columns: 1fr 1fr;
   padding: var(--padding);
+
+  width: 100%;
+  height: 100%;
+}
+
+.start-btn {
+  font-size: 2rem;
+  font-weight: bold;
+  letter-spacing: 3px;
+  padding: var(--padding);
+  border: 3px solid var(--base-blue);
+  background-color: var(--green);
+  border-radius: 10px;
+  color: var(--lightest-color);
+  text-shadow: 0 0 3px var(--light-gray);
+  box-shadow: 0 5px 5px 1px var(--light-gray);
+
+  width: max-content;
+  position: absolute;
+
 }
 
 /* Cards (start) */
@@ -48,9 +75,26 @@ header {
   align-items: center;
   gap: 8px;
   border: 1px solid black;
-  padding: var(--padding);
-  width: max-content;
+  border-radius: 10px;
+  padding: calc(var(--padding) * 2);
+  width: 100%;
+  height: 100%;
   position: relative;
+}
+
+.cards-cont::before {
+  content: ' ';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.4;
+  background-image: url('./assets/bg-1.png');
+  background-position: bottom;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .card {
@@ -68,7 +112,7 @@ header {
 
   transform-style: preserve-3d;
   transition: transform 0.3s linear;
-  transform: rotateY(180deg) rotateZ(20deg);
+  transform: rotateY(180deg);
 }
 
 .card.flip-front.disabled:hover {
@@ -226,7 +270,7 @@ header {
 }
 
 .modal-screen::backdrop {
-  background-color: rgba(186, 144, 198, 0.5);
+  background-color: rgba(186, 144, 198, 0.8);
   filter: brightness(0.3);
 }
 
@@ -236,6 +280,38 @@ header {
   padding: calc(var(--padding) * 2);
 }
 
+.game-over-screen {
+  background-color: var(--lightest-color);
+  min-height: max-content;
+  border: 5px solid var(--red);
+}
+
+.game-over-screen .modal-content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: calc(var(--margin) * 2);
+}
+
+.play-again-btn {
+  background-color: var(--l);
+  font-size: 1rem;
+  font-weight: bold;
+  padding: var(--padding);
+  border: 3px solid var(--base-blue);
+  border-radius: 10px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.play-again-btn svg {
+  width: 50px;
+}
+
+/* loading screen modal */
 .modal-screen.loading-screen {
   border: 1px solid transparent;
   background-color: transparent;
