--- a/src/index.css
+++ b/src/index.css
@@ -177,9 +177,22 @@ button:hover {
   }
 }
 
+@keyframes flip-back {
+  from {
+    transform: rotateY(0deg) rotateZ(0deg);
+  } to {
+    transform: rotateY(180deg) rotateZ(20deg);
+  }
+}
+
 .card.flip-front {
-  animation: flip-front 0.3s ease-in-out 1;
-  transform: rotateY(0deg) rotateZ(0deg);
+  animation: flip-front 0.6s ease-in-out 1;
+  transform: rotateY(0deg) rotateZ(0deg); 
+}
+
+.card.flip-back {
+  animation: flip-back 0.6s ease-in-out 1;
+  /* transform: rotateY(180deg) rotateZ(0deg);  */
 }
 
 .card-front, .card-back {
@@ -293,7 +306,7 @@ button:hover {
   background: var(--base-blue);
   border-radius: 5px;
   height: 100%;
-  transition: width 0.5s ease-in-out;
+  transition: width 0.3s ease-in;
 }
 
 /* Score Board (end) */
@@ -355,17 +368,24 @@ button:hover {
   font-size: 2rem;
 }
 
+.game-over-score {
+  color: var(--light-yellow);
+  font-size: 1.5rem;
+  margin-top: var(--margin);
+}
+
 .game-over-icon {
   width: 100px;
-  margin-top: calc(var(--margin) * 3);
+  margin-top: calc(var(--margin) * 2);
   transform: rotateY(180deg);
 }
 
 .play-again-btn {
-  background-color: white;
-  border: 5px solid var(--base-blue);
+  background-color: var(--base-blue);
+  border: 5px solid white;
   border-radius: 10px;
-  color: black;
+  color: white;
+  text-shadow: 0 0 3px var(--light-gray);
   
   margin-top: var(--margin);
   font-family: var(--handwritten-font);
@@ -379,10 +399,17 @@ button:hover {
   display: flex;  
   flex-direction: column;
   align-items: center;
+
+  transition: 200ms;
 }
 
 .play-again-btn svg {
   width: 50px;
+}
+
+.play-again-btn:hover {
+  filter: brightness(1);
+  box-shadow: 0 0 10px 1px var(--purple);
 }
 
 /* loading screen modal */
