--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,16 @@
   width: 50px;
   grid-column: 1 / 2;
   grid-row: 1 / 3;
+  animation: spin 30s linear infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotateZ(0deg);
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
 }
 
 .page-name {
@@ -59,7 +69,7 @@
 }
 
 .sub-name {
-  font-size: 0.8rem;
+  font-size: 0.6rem;
   grid-row: 2 / 3;
   grid-column: 2 / 3;
 }
