--- a/src/index.css
+++ b/src/index.css
@@ -42,22 +42,14 @@
   display: grid;
   grid-template-columns: repeat(2, max-content);
   grid-template-rows: repeat(2, max-content);
+  column-gap: var(--margin);
 }
 
 .page-logo {
   width: 50px;
   grid-column: 1 / 2;
   grid-row: 1 / 3;
-  animation: spin 30s linear infinite;
-}
-
-@keyframes spin {
-  from {
-    transform: rotateZ(0deg);
-  }
-  to {
-    transform: rotateZ(360deg);
-  }
+  border: 1px solid var(--light-gray);
 }
 
 .page-name {
@@ -596,6 +588,12 @@ footer {
   gap: var(--margin);
 }
 
+.footer-content p, .footer-content a {
+  font-family: var(--header-font);
+  color: white;
+  text-shadow: 0 0 2px rgba(0, 0, 0, 0.8);
+}
+
 .footer-author {
   display: flex;
   gap: var(--margin);
@@ -609,16 +607,22 @@ footer {
 }
 
 .github-icon {
-  width: 1rem;
+  width: 1.3rem;
+  filter: drop-shadow(0 0 1px rgba(0, 0, 0, 0.3));
 }
 
-a {
+.footer-content a {
   text-decoration: none;
-  color: black;
+  color: var(--light-yellow)
 }
 
-a:visited {
-  color: black;
+.footer-content a:visited {
+  color: var(--light-yellow)
 }
+
+.footer-content a:hover {
+  color: greenyellow;
+}
+
 
 /* Footer (end) */
