--- a/src/index.css
+++ b/src/index.css
@@ -100,6 +100,7 @@
 
 .info-screen p,  .info-screen li {
   color: white;
+  font-size: 1rem;
 }
 
 .modal-screen.info-screen {
@@ -107,12 +108,47 @@
   border-radius: unset;
   background: transparent;
   padding: 30px;
+  margin-top: 30px;
 }
 
 .info-screen .modal-content {
   background-color: var(--gray);
-  border: 5px solid var(--base-blue);
+  border: 5px solid var(--light-yellow);
   border-radius: 10px;
+  box-shadow: 0 0 10px 1px rgba(253, 244, 245, 0.5);
+  max-width: 400px;
+  width: max-content;
+
+  display: flex;
+  flex-direction: column;
+  gap: var(--padding);
+
+  overflow: auto;
+}
+
+.info-screen h2 {
+  text-align: center;
+  color: var(--light-yellow);
+  font-size: 1.3rem;
+  font-family: var(--handwritten-font);
+  margin-bottom: var(--margin);
+}
+
+ol {
+  margin-left: var(--margin);
+  display: flex;
+  flex-direction: column;
+  gap: var(--padding);
+}
+
+li {
+  line-height: 1.5rem;
+  padding-left: var(--padding);
+}
+
+.info-gif {
+  align-self: center;
+  margin-top: var(--margin);
 }
 
 .close-btn {
@@ -121,16 +157,21 @@
   align-items: center;
   width: max-content;
   justify-self: end;
-  border: 2px solid var(--base-blue);
+  border: 3px solid var(--red);
   border-radius: 50%;
   padding: calc(var(--padding) * 0.5);
   position: absolute;
   top: 10px;
   right: 10px;
+  background-color: var(--lightest-color);
 }
 
 .close-btn svg {
   width: 30px;
+}
+
+.close-btn svg path {
+  fill: var(--red) !important;
 }
 
 /* info button and modal (end) */
