--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -80,6 +80,12 @@
 }
 
 /* info button and modal (start) */
+.menu-option {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .info-btn {
   width: max-content;
   height: max-content;
@@ -156,7 +162,6 @@ li {
   justify-content: center;
   align-items: center;
   width: max-content;
-  justify-self: end;
   border: 3px solid var(--red);
   border-radius: 50%;
   padding: calc(var(--padding) * 0.5);
@@ -180,10 +185,6 @@ button:hover {
   filter: brightness(1.1);
 }
 
-main {
-  background-color: rgba(28, 179, 200, 0.2);
-}
-
 body::before {
   content: ' ';
   display: block;
@@ -197,6 +198,18 @@ body::before {
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
+  z-index: -2;
+}
+
+#root::before {
+  content: ' ';
+  display: block;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(28, 179, 200, 0.2);
   z-index: -1;
 }
 
@@ -220,6 +233,7 @@ body::before {
   width: max-content;
   padding: var(--padding) calc(var(--padding) * 2);
   border: 5px solid var(--base-blue);
+  box-shadow: 0 0 10px 1px rgba(255, 255, 255, 0.5);
   background-color: var(--green);
   border-radius: 10px;
 
@@ -266,7 +280,7 @@ body::before {
   height: 100%;
   opacity: 0.5;
   background-image: url('../assets/bg-1.png');
-  background-position: bottom;
+  background-position: bottom right;
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -377,6 +391,9 @@ body::before {
 
 .sprite-cont {
   border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-image: url(../assets/bg-4.png);
   background-position: center;
   background-size: 200%;
@@ -715,12 +732,15 @@ footer {
   font-family: var(--header-font);
   color: white;
   text-shadow: 0 0 2px rgba(0, 0, 0, 0.8);
+  text-align: center;
 }
 
 .footer-author {
   display: flex;
-  gap: var(--margin);
+  flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
+  gap: var(--margin);
 }
 
 .github-link {
