--- a/src/styles/screenMedia.css
+++ b/src/styles/screenMedia.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 830px) {
+@media only screen and (max-width: 769px) {
   .page-banner {
     column-gap: calc(var(--margin) * 0.5);
   }
@@ -21,25 +21,14 @@
     align-self: center;
   }
 
-  .game-area {
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    gap: calc(var(--margin) * 0.5);
-    grid-template-rows: max-content 1fr;
-    position: relative;
-  }
-
   .score-board {
     min-width: unset;
     gap: calc(var(--margin) * 0.5);
     position: sticky;
     position: -webkit-sticky;
     z-index: 2;
-    padding: var(--padding);
     top: 0;
     left: 0;
-    background-color: rgba(186, 144, 198, 0.5);
   }
 
   .main-score-board {
@@ -63,6 +52,12 @@
     grid-template-rows: repeat(2, max-content);
   }
 
+  .game-area {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+  }
+
   .cards-cont {
     width: 95%;
     min-height: 60vh;
@@ -72,13 +67,16 @@
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     grid-template-rows: unset;
     grid-auto-rows: max-content;
-  } 
+  }
 
   .sprite-cont {
     width: 100%;
     overflow: hidden;
   }
+}
 
+
+@media only screen and (max-width: 830px) {
   .card {
     width: 100%;
     min-width: 100px;
@@ -107,11 +105,13 @@
 
   .modal-screen.info-screen {
     padding: 15px;
+    max-width: 400px;
   }
 
   .info-screen .modal-content {
     width: 100%;
     max-height: 90vh;
+    max-width: 400px;
   }
 
   .close-btn {
@@ -120,3 +120,4 @@
   }
 
 }
+
